@@ -18,6 +18,9 @@ Trunk -  Unreleased
     HIVE-1152. Add metastore API method to drop/append partition by name.
     (Paul Yang via zshao)
 
+    HIVE-1147. Update Eclipse project configuration to match Checkstyle
+    (Carl Steinbach via zshao)
+
   IMPROVEMENTS
 
     HIVE-983. Function from_unixtime takes long.
